feat:add functionality to control music from progress bar and for audio to continue playing next track automatically

--- a/music_player.html
+++ b/music_player.html
@@ -11,17 +11,17 @@
     <div class="player_container">
       <div class="image_container">
         <img
-          src="images/01 Don't Stop 'Til You Get Enough.jpg"
+          src="images/01 Luxury_Cococure.jpg"
           alt="album cover"
         />
       </div>
-      <h2 id="title">Don't Stop 'Til You Get Enough</h2>
+      <h2 id="title">Luxury_Cococure</h2>
       <!--<h3 id="album">Off The Wall</h3>-->
-      <h3 id="artist">Michael Jackson</h3>
+      <e id="artist">Maxwell</e>
 
       <audio
         id="music"
-        src="tracks/01 Don't Stop 'Til You Get Enough.mp3"
+        src="tracks/01 Luxury_Cococure.mp3"
       ></audio>
 
       <!--Progress Bar-->
