feat: replace track 03 and amend styling of artist name

--- a/music_player.html
+++ b/music_player.html
@@ -17,7 +17,7 @@
       </div>
       <h2 id="title">Luxury_Cococure</h2>
       <!--<h3 id="album">Off The Wall</h3>-->
-      <e id="artist">Maxwell</e>
+      <h3 id="artist">Maxwell</h3>
 
       <audio
         id="music"
