--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Player</title>
     <link rel="stylesheet" href="music_player.css" />
+    <script src="https://kit.fontawesome.com/13e0592400.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="player_container">
@@ -39,17 +40,13 @@
         <i class="fa-sharp fa-solid fa-backward" id="prev" title="previous"
           >Prev</i
         >
-        <i class="fa-sharp fa-solid fa-play main_button" id="play" title="play"
+        <i class="fa-sharp fa-solid fa-play" id="play" title="play"
           >Play</i
         >
         <i class="fa-sharp fa-solid fa-forward" id="next" title="next">Next</i>
       </div>
     </div>
-
-    <script
-      src="https://kit.fontawesome.com/13e0592400.js"
-      crossorigin="anonymous"
-    ></script>
+    
     <script src="music_player.js"></script>
   </body>
 </html>
